[package]
name = "multitool"
version = "0.0.1"
edition = "2018"
description = "System Tools with real-time Web UI"
repository = "https://github.com/rillrate/multitool"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.42"
clap = "3.0.0-beta.2"
env_logger = "0.9.0"
log = "0.4.14"
rillrate = "0.36.0"
sysinfo = "0.20.0"
