[package]
name = "multitool"
version = "0.0.1"
edition = "2018"
description = "System Tools with real-time Web UI"
repository = "https://github.com/rillrate/multitool"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
futures = "0.3.16"
log = "0.4.14"
rillrate = "0.37.0-rc.1"
shiplift = { git = "https://github.com/softprops/shiplift", optional = true }
sysinfo = { version = "0.20.0", optional = true }
tokio = "1.10.0"

[features]
default = ["system-app", "docker-app"]
system-app = ["sysinfo"]
docker-app = ["shiplift"]
