[package]
name = "multitool"
version = "0.40.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
description = "Multitool for RillRate"
repository = "https://github.com/rillrate/multitool"
homepage = "https://github.com/rillrate/multitool"
documentation = "https://docs.rs/multitool/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
reqwest = "0.11.4"
rillrate = "0.40.0"
shiplift = { git = "https://github.com/softprops/shiplift", optional = true }
tokio = "1.11.0"
mtl-system = { version = "0.40.0", path = "../tools/system" }

[features]
default = ["docker-app"]
docker-app = ["shiplift"]
